feat(common): support SSL/TLS in messenger